--- a/HiddenVilla_Client/Pages/HotelRooms/RoomDetails.razor
+++ b/HiddenVilla_Client/Pages/HotelRooms/RoomDetails.razor
@@ -27,13 +27,42 @@ else
                         <div id="" class="carousel slide mb-4 m-md-3 m-0 pt-3 pt-md-0" data-ride="carousel">
                             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                    @{
+                                        int imageIndex = 0;
+                                        int innerImageIndex = 0;
+                                    }
+                                    @foreach (var image in HotelBooking.OrderDetails.HotelRoomDTO.HotelRoomImages)
+                                    {
+                                        @if (imageIndex == 0)
+                                        {
+                                            <li data-target="#carouselExampleIndicators" data-slide-to="@imageIndex" class="active"></li>
+
+                                        }
+                                        else
+                                        {
+                                            <li data-target="#carouselExampleIndicators" data-slide-to="@imageIndex"></li>
+
+                                        }
+                                        imageIndex++;
+                                    }
                                 </ol>
                                 <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img class="d-block w-100" src="images/slide1.jpg" alt="First slide">
-                                    </div>
+                                    @foreach (var image in HotelBooking.OrderDetails.HotelRoomDTO.HotelRoomImages)
+                                    {
+                                        if (innerImageIndex == 0)
+                                        {
+                                            <div class="carousel-item active">
+                                                <img class="d-block w-100" style="border-radius:20px;" src="@image.RoomImageUrl" alt="First slide">
+                                            </div>
+                                        }
+                                        else
+                                        {
+                                            <div class="carousel-item">
+                                                <img class="d-block w-100" style="border-radius:20px;" src="@image.RoomImageUrl" alt="First slide">
+                                            </div>
+                                        }
+                                        innerImageIndex++;
+                                    }
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
