--- a/HiddenVilla_Server/Pages/HotelRoomOrder/HotelRoomOrderList.razor
+++ b/HiddenVilla_Server/Pages/HotelRoomOrder/HotelRoomOrderList.razor
@@ -27,7 +27,7 @@
             </RadzenGridColumn>
             <RadzenGridColumn TItem="RoomOrderDetailsDTO" Property="Id" Title="">
                 <Template Context="data">
-                    <NavLink class="btn btn-primary" href="@($"hotel-room-order/details/{data.Id}")">Edit</NavLink>
+                    <NavLink class="btn btn-primary" href="@($"hotel-room-order/details/{data.Id}")">Details</NavLink>
                 </Template>
             </RadzenGridColumn>
             
